--- a/src/components/layout/AppLeftSidebar/AppLeftSidebar.module.scss
+++ b/src/components/layout/AppLeftSidebar/AppLeftSidebar.module.scss
@@ -1,6 +1,6 @@
 .appLeftSidebar {
   padding-top: 1rem;
-  background-color: var(--color-shade-darkest);
+  background-color: var(--color-shade-contrast-01);
 }
 .appLeftSidebarMenuItem {
   display: flex;
